// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Question matches snapshot for individual 1`] = `
<ForwardRef(Bootstrap(Container))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))>
      <ForwardRef(Bootstrap(Jumbotron))>
        <h1
          className="capitalized"
        >
          individual
           assessment
        </h1>
      </ForwardRef(Bootstrap(Jumbotron))>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))
      xs={12}
    >
      <h2>
        Question #
        1
      </h2>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))
      xs={12}
    >
      <ForwardRef(Bootstrap(Form))>
        <p>
          In a lake, there is a patch of lily pads. Every day, the patch doubles in size. If it takes 48 days for the patch to cover the entire lake, how long would it take for the patch to cover half of the lake?
        </p>
        <ForwardRef(Bootstrap(FormGroup))>
          <ForwardRef(Bootstrap(FormCheck))
            checked={false}
            label="24"
            type="checkbox"
          />
        </ForwardRef(Bootstrap(FormGroup))>
        <ForwardRef(Bootstrap(FormGroup))>
          <ForwardRef(Bootstrap(FormCheck))
            checked={false}
            label="47"
            type="checkbox"
          />
        </ForwardRef(Bootstrap(FormGroup))>
        <ForwardRef(Bootstrap(FormGroup))>
          <ForwardRef(Bootstrap(FormCheck))
            checked={false}
            label="96"
            type="checkbox"
          />
        </ForwardRef(Bootstrap(FormGroup))>
        <ForwardRef(Bootstrap(FormGroup))>
          <ForwardRef(Bootstrap(FormCheck))
            checked={false}
            label="49"
            type="checkbox"
          />
        </ForwardRef(Bootstrap(FormGroup))>
      </ForwardRef(Bootstrap(Form))>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))
      xs={12}
    >
      <p>
        <ForwardRef(Bootstrap(ProgressBar))
          active={true}
          label="0%"
          now={0}
          srOnly={true}
        />
      </p>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <Connect(StartOver) />
</ForwardRef(Bootstrap(Container))>
`;

exports[`components/Question matches snapshot for team 1`] = `
<ForwardRef(Bootstrap(Container))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))>
      <ForwardRef(Bootstrap(Jumbotron))>
        <h1
          className="capitalized"
        >
          team
           assessment
        </h1>
        <p>
          0
           of 
          0
           team members have answered this question.
        </p>
      </ForwardRef(Bootstrap(Jumbotron))>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))
      xs={12}
    >
      <h2>
        Question #
        1
      </h2>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))
      xs={12}
    >
      <ForwardRef(Bootstrap(Form))>
        <p>
          In a lake, there is a patch of lily pads. Every day, the patch doubles in size. If it takes 48 days for the patch to cover the entire lake, how long would it take for the patch to cover half of the lake?
        </p>
        <ForwardRef(Bootstrap(FormGroup))>
          <ForwardRef(Bootstrap(FormCheck))
            checked={false}
            label="24"
            type="checkbox"
          />
        </ForwardRef(Bootstrap(FormGroup))>
        <ForwardRef(Bootstrap(FormGroup))>
          <ForwardRef(Bootstrap(FormCheck))
            checked={false}
            label="47"
            type="checkbox"
          />
        </ForwardRef(Bootstrap(FormGroup))>
        <ForwardRef(Bootstrap(FormGroup))>
          <ForwardRef(Bootstrap(FormCheck))
            checked={false}
            label="96"
            type="checkbox"
          />
        </ForwardRef(Bootstrap(FormGroup))>
        <ForwardRef(Bootstrap(FormGroup))>
          <ForwardRef(Bootstrap(FormCheck))
            checked={false}
            label="49"
            type="checkbox"
          />
        </ForwardRef(Bootstrap(FormGroup))>
      </ForwardRef(Bootstrap(Form))>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))
      xs={12}
    >
      <p>
        <ForwardRef(Bootstrap(ProgressBar))
          active={true}
          label="0%"
          now={0}
          srOnly={true}
        />
      </p>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <Connect(StartOver)>
    <LinkContainer
      activeClassName="active"
      exact={false}
      replace={false}
      strict={false}
      to="/question/2"
    >
      <ForwardRef(Bootstrap(Button))
        variant="success"
      >
        Next
      </ForwardRef(Bootstrap(Button))>
    </LinkContainer>
  </Connect(StartOver)>
</ForwardRef(Bootstrap(Container))>
`;

exports[`components/Question matches snapshot for team all answered 1`] = `
<ForwardRef(Bootstrap(Container))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))>
      <ForwardRef(Bootstrap(Jumbotron))>
        <h1
          className="capitalized"
        >
          team
           assessment
        </h1>
        <p>
          0
           of 
          1
           team members have answered this question.
        </p>
      </ForwardRef(Bootstrap(Jumbotron))>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))
      xs={12}
    >
      <h2>
        Question #
        1
      </h2>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))
      xs={12}
    >
      <ForwardRef(Bootstrap(Form))>
        <p>
          In a lake, there is a patch of lily pads. Every day, the patch doubles in size. If it takes 48 days for the patch to cover the entire lake, how long would it take for the patch to cover half of the lake?
        </p>
        <ForwardRef(Bootstrap(FormGroup))>
          <ForwardRef(Bootstrap(FormCheck))
            checked={false}
            label="24"
            type="checkbox"
          />
        </ForwardRef(Bootstrap(FormGroup))>
        <ForwardRef(Bootstrap(FormGroup))>
          <ForwardRef(Bootstrap(FormCheck))
            checked={false}
            label="47"
            type="checkbox"
          />
        </ForwardRef(Bootstrap(FormGroup))>
        <ForwardRef(Bootstrap(FormGroup))>
          <ForwardRef(Bootstrap(FormCheck))
            checked={false}
            label="96"
            type="checkbox"
          />
        </ForwardRef(Bootstrap(FormGroup))>
        <ForwardRef(Bootstrap(FormGroup))>
          <ForwardRef(Bootstrap(FormCheck))
            checked={false}
            label="49"
            type="checkbox"
          />
        </ForwardRef(Bootstrap(FormGroup))>
      </ForwardRef(Bootstrap(Form))>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))
      xs={12}
    >
      <p>
        <ForwardRef(Bootstrap(ProgressBar))
          active={true}
          label="0%"
          now={0}
          srOnly={true}
        />
      </p>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <Connect(StartOver)>
    <LinkContainer
      activeClassName="active"
      exact={false}
      replace={false}
      strict={false}
      to="/question/2"
    >
      <ForwardRef(Bootstrap(Button))
        disabled={true}
        variant="success"
      >
        Next
      </ForwardRef(Bootstrap(Button))>
    </LinkContainer>
  </Connect(StartOver)>
</ForwardRef(Bootstrap(Container))>
`;

exports[`components/Question matches snapshot for team last question 1`] = `
<ForwardRef(Bootstrap(Container))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))>
      <ForwardRef(Bootstrap(Jumbotron))>
        <h1
          className="capitalized"
        >
          team
           assessment
        </h1>
        <p>
          0
           of 
          0
           team members have answered this question.
        </p>
      </ForwardRef(Bootstrap(Jumbotron))>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))
      xs={12}
    >
      <h2>
        Question #
        2
      </h2>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))
      xs={12}
    >
      <ForwardRef(Bootstrap(Form))>
        <p>
          A bat and a ball cost $1.10 in total. The bat costs $1.00 more than the ball. How much does the ball cost?
        </p>
        <ForwardRef(Bootstrap(FormGroup))>
          <ForwardRef(Bootstrap(FormCheck))
            checked={false}
            label="$0.05"
            type="checkbox"
          />
        </ForwardRef(Bootstrap(FormGroup))>
        <ForwardRef(Bootstrap(FormGroup))>
          <ForwardRef(Bootstrap(FormCheck))
            checked={false}
            label="$0.06"
            type="checkbox"
          />
        </ForwardRef(Bootstrap(FormGroup))>
        <ForwardRef(Bootstrap(FormGroup))>
          <ForwardRef(Bootstrap(FormCheck))
            checked={false}
            label="$0.10"
            type="checkbox"
          />
        </ForwardRef(Bootstrap(FormGroup))>
        <ForwardRef(Bootstrap(FormGroup))>
          <ForwardRef(Bootstrap(FormCheck))
            checked={false}
            label="$0.50"
            type="checkbox"
          />
        </ForwardRef(Bootstrap(FormGroup))>
      </ForwardRef(Bootstrap(Form))>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))
      xs={12}
    >
      <p>
        <ForwardRef(Bootstrap(ProgressBar))
          active={true}
          label="50%"
          now={50}
          srOnly={true}
        />
      </p>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <Connect(StartOver)>
    <LinkContainer
      activeClassName="active"
      exact={false}
      replace={false}
      strict={false}
      to="/summary"
    >
      <ForwardRef(Bootstrap(Button))
        variant="success"
      >
        Next
      </ForwardRef(Bootstrap(Button))>
    </LinkContainer>
  </Connect(StartOver)>
</ForwardRef(Bootstrap(Container))>
`;
